Sync all content

--- a/content/resources/esd-932s06.md
+++ b/content/resources/esd-932s06.md
@@ -13,6 +13,7 @@ image_metadata:
   image-alt: Photo of abandoned house.
 learning_resource_types: []
 ocw_type: OCWImage
+parent_uid: null
 resourcetype: Image
 title: esd-932s06.jpg
 uid: fa0cc388-e46c-a929-1886-9ad918ef07c8
