--- a/content/resources/esd-932s06.md
+++ b/content/resources/esd-932s06.md
@@ -3,7 +3,7 @@ content_type: resource
 description: The Love Canal toxic waste site, with its long history of health effects,
   cleanup efforts, and eventual relocation of all residents, is one of the case studies
   considered in this course. (Photograph courtesy of U.S. EPA.)
-file: /media/courses/esd-932-engineering-ethics-spring-2006/fa0cc388e46ca92918869ad918ef07c8_esd-932s06.jpg
+file: /courses/esd-932-engineering-ethics-spring-2006/fa0cc388e46ca92918869ad918ef07c8_esd-932s06.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Love Canal toxic waste site, with its long history of health effects,
@@ -13,8 +13,9 @@ image_metadata:
   image-alt: Photo of abandoned house.
 learning_resource_types: []
 ocw_type: OCWImage
-parent_uid: null
 resourcetype: Image
 title: esd-932s06.jpg
 uid: fa0cc388-e46c-a929-1886-9ad918ef07c8
 ---
+The Love Canal toxic waste site, with its long history of health effects, cleanup efforts, and eventual relocation of all residents, is one of the case studies considered in this course. (Photograph courtesy of U.S. EPA.)
+
