Sync all content

--- a/content/resources/esd-932s06.md
+++ b/content/resources/esd-932s06.md
@@ -12,10 +12,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of abandoned house.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: esd-932s06.jpg
 uid: fa0cc388-e46c-a929-1886-9ad918ef07c8
 ---
 The Love Canal toxic waste site, with its long history of health effects, cleanup efforts, and eventual relocation of all residents, is one of the case studies considered in this course. (Photograph courtesy of U.S. EPA.)
-
